Conteúdo da página inserido.

--- a/css-avancado/brafe-1-puro/index.html
+++ b/css-avancado/brafe-1-puro/index.html
@@ -77,5 +77,68 @@
       <a href="#">Saiba Mais</a>
     </div>
   </section>
+
+  <section>
+    <div>
+      <img src="./assets/img/iguatemi.jpg.jpg" alt="brafé unidade botafogo">
+      <div>
+        <h2>Iguatemi</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+          Amet dictum sit amet justo donec enim diam vulputate ut. 
+          Quis varius quam quisque id diam vel. 
+          Iaculis eu non diam phasellus vestibulum lorem sed</p>
+          <a href="#">Ver Mapa</a>
+      </div>
+    </div>
+
+    <div>
+      <img src="./assets/img/botafogo.jpg" alt="brafé unidade botafogo">
+      <div>
+        <h2>Botafogo</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+          Amet dictum sit amet justo donec enim diam vulputate ut. 
+          Quis varius quam quisque id diam vel. 
+          Iaculis eu non diam phasellus vestibulum lorem sed</p>
+          <a href="#">Ver Mapa</a>
+      </div>
+    </div>
+
+    <div>
+      <img src="./assets/img/mineirao.jpg" alt="brafé unidade botafogo">
+      <div>
+        <h2>Mineirão</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+          Amet dictum sit amet justo donec enim diam vulputate ut. 
+          Quis varius quam quisque id diam vel. 
+          Iaculis eu non diam phasellus vestibulum lorem sed</p>
+          <a href="#">Ver Mapa</a>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div>
+      <div>
+        <h2>Assine a nossa Newsletter</h2>
+        <p>promoções e eventos mensais</p>
+      </div>
+
+      <form action="">
+        <label for="">E-mail</label>
+        <input type="text" placeholder="Digite o seu e-mail">
+        <button type="submit">Enviar</button>
+      </form>
+    </div>
+  </section>
+
+  <footer>
+    <div>
+      <p>Este é um projeto do curso de Css Avançado da Origamid</p>
+    </div>
+    <img src="./assets/img/brafe.png" alt="brafé logo">
+  </footer>
 </body>
 </html>
