--- a/css-avancado/brafe-1-puro/index.html
+++ b/css-avancado/brafe-1-puro/index.html
@@ -7,18 +7,19 @@
   <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
-  <header>
-    <div class="logo-brafe">
-      <a href=""><img src="./assets/img/brafe.png" alt="brafe logo"></a>
-    </div>
-    <nav>
-      <ul>
-        <li><a href="">Sobre</a></li>
-        <li><a href="">Produtos</a></li>
-        <li><a href="">Portfólio</a></li>
-        <li><a href="">Contato</a></li>
-      </ul>
-    </nav>
+  <header class="menu">
+    <div class="menu-container">
+      <a class="menu-logo" href=""><img src="./assets/img/brafe.png" alt="brafe logo"></a>
+
+      <nav class="menu-nav">
+        <ul>
+          <li><a href="">Sobre</a></li>
+          <li><a href="">Produtos</a></li>
+          <li><a href="">Portfólio</a></li>
+          <li><a href="">Contato</a></li>
+        </ul>
+      </nav>
+    </div>    
   </header>
 
   <main>
