--- a/css-avancado/brafe-1-puro/index.html
+++ b/css-avancado/brafe-1-puro/index.html
@@ -27,26 +27,25 @@
     <p>Direto das fazendas de Minas Gerais.</p>
   </main>
 
-  <section>
+  <section class="about">
     <h2>Uma Mistura de </h2>
-
-    <div>
-      <div>
+    <div class="about-container">
+      <div class="about-item">
         <img src="./assets/img/cafe-1.jpg" alt="">
         <h3>amor</h3>
       </div>
-      <div>
+      <div class="about-item">
         <img src="./assets/img/cafe-2.jpg" alt="">
         <h3>perfeição</h3>
       </div>
-      <p>
-        O café é uma bebida produzida a partir dos grãos 
-        torrados do fruto do cafeeiroo. É servido tradicionalmente
-        quente, mas também pode ser consumido gelado. Ele é 
-        um estimulante, por possuir cafeína - geralmente 80 a 140
-        mg para cada 207 ml dependendo do método de preparação.
-      </p>
     </div>
+    <p>
+      O café é uma bebida produzida a partir dos grãos 
+      torrados do fruto do cafeeiroo. É servido tradicionalmente
+      quente, mas também pode ser consumido gelado. Ele é 
+      um estimulante, por possuir cafeína - geralmente 80 a 140
+      mg para cada 207 ml dependendo do método de preparação.
+    </p>
   </section>
 
   <section>
