Seção de products finalizada.

--- a/css-avancado/brafe-1-puro/index.html
+++ b/css-avancado/brafe-1-puro/index.html
@@ -48,34 +48,34 @@
     </p>
   </section>
 
-  <section>
-    <div>
-      <div>
-        <h2>Paulista</h2>
+  <section class="products">
+    <div class="products-container">
+      <div class="products-item">
+        <h2 class="products-paulista">Paulista</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
           sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
           Amet dictum sit amet justo donec enim diam vulputate ut. 
           Quis varius quam quisque id diam vel. 
           Iaculis eu non diam phasellus vestibulum lorem sed</p>
       </div>
-      <div>
-        <h2>Carioca</h2>
+      <div class="products-item">
+        <h2 class="products-carioca">Carioca</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
           sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
           Amet dictum sit amet justo donec enim diam vulputate ut. 
           Quis varius quam quisque id diam vel. 
           Iaculis eu non diam phasellus vestibulum lorem sed</p>
       </div>
-      <div>
-        <h2>Mineiro</h2>
+      <div class="products-item">
+        <h2 class="products-mineiro">Mineiro</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
           sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
           Amet dictum sit amet justo donec enim diam vulputate ut. 
           Quis varius quam quisque id diam vel. 
           Iaculis eu non diam phasellus vestibulum lorem sed</p>
       </div>
-      <a href="#">Saiba Mais</a>
     </div>
+    <a class="products-btn" href="#">Saiba Mais</a>
   </section>
 
   <section>
