Seção locals finalizada.

--- a/css-avancado/brafe-1-puro/index.html
+++ b/css-avancado/brafe-1-puro/index.html
@@ -78,42 +78,33 @@
     <a class="products-btn" href="#">Saiba Mais</a>
   </section>
 
-  <section>
-    <div>
-      <img src="./assets/img/iguatemi.jpg.jpg" alt="brafé unidade botafogo">
+  <section class="locals">
+    <div class="locals-item">
+      <img src="./assets/img/iguatemi.jpg" alt="brafé unidade botafogo">
       <div>
         <h2>Iguatemi</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-          Amet dictum sit amet justo donec enim diam vulputate ut. 
-          Quis varius quam quisque id diam vel. 
-          Iaculis eu non diam phasellus vestibulum lorem sed</p>
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
           <a href="#">Ver Mapa</a>
       </div>
     </div>
 
-    <div>
+    <div class="locals-item">
       <img src="./assets/img/botafogo.jpg" alt="brafé unidade botafogo">
       <div>
         <h2>Botafogo</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-          Amet dictum sit amet justo donec enim diam vulputate ut. 
-          Quis varius quam quisque id diam vel. 
-          Iaculis eu non diam phasellus vestibulum lorem sed</p>
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
           <a href="#">Ver Mapa</a>
       </div>
     </div>
 
-    <div>
+    <div class="locals-item">
       <img src="./assets/img/mineirao.jpg" alt="brafé unidade botafogo">
       <div>
         <h2>Mineirão</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-          Amet dictum sit amet justo donec enim diam vulputate ut. 
-          Quis varius quam quisque id diam vel. 
-          Iaculis eu non diam phasellus vestibulum lorem sed</p>
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
           <a href="#">Ver Mapa</a>
       </div>
     </div>
