Seção newsletter finalizada.

--- a/css-avancado/brafe-1-puro/index.html
+++ b/css-avancado/brafe-1-puro/index.html
@@ -110,9 +110,9 @@
     </div>
   </section>
 
-  <section>
-    <div>
-      <div>
+  <section class="newsletter">
+    <div class="newsletter-container">
+      <div class="newsletter-info">
         <h2>Assine a nossa Newsletter</h2>
         <p>promoções e eventos mensais</p>
       </div>
@@ -120,7 +120,7 @@
       <form action="">
         <label for="">E-mail</label>
         <input type="text" placeholder="Digite o seu e-mail">
-        <button type="submit">Enviar</button>
+        <button type="submit" class="newsletter-btn">Enviar</button>
       </form>
     </div>
   </section>
