Fooer da págna brafe 1 puro desktop finalizado.

--- a/css-avancado/brafe-1-puro/index.html
+++ b/css-avancado/brafe-1-puro/index.html
@@ -125,11 +125,11 @@
     </div>
   </section>
 
-  <footer>
-    <div>
+  <footer class="footer">
+    <div class="footer-container">
       <p>Este é um projeto do curso de Css Avançado da Origamid</p>
+      <img class="footer-logo" src="./assets/img/brafe.png" alt="brafé logo">
     </div>
-    <img src="./assets/img/brafe.png" alt="brafé logo">
   </footer>
 </body>
 </html>
