--- a/css-avancado/brafe-1-flexbox/index.html
+++ b/css-avancado/brafe-1-flexbox/index.html
@@ -98,12 +98,12 @@ aente quente, mas também pode ser consumido gelado. Ele é um estimulante, por 
 	</section>
 	
 	<section class="assine">
-		<div>
+		<div class="container">
 			<div class="assine-info">
 				<h2>Assine Nossa Newsletter</h2>
 				<p>promoções e eventos mensais</p>
 			</div>
-			<form>
+			<form >
 				<label>E-mail</label>
 				<input type="text" placeholder="Digite seu e-mail">
 				<button type="submit">Enviar</button>
@@ -112,9 +112,11 @@ aente quente, mas também pode ser consumido gelado. Ele é um estimulante, por 
 	</section>
 	
 	<footer class="footer">
-		<div>
+		<div class="container">
 			<p>Este é um projeto da Origamid. Mais em origamid.com<br>Praia de Botafogo, 300, 5º andar - Botafogo - Rio de Janeiro</p>
-			<img src="img/brafe.png" alt="Brafé">
+			<div class="footer-img">
+				<img src="img/brafe.png" alt="Brafé">
+			</div>
 		</div>
 	</footer>
 	
