--- a/css-avancado/brafe2/puro/index.html
+++ b/css-avancado/brafe2/puro/index.html
@@ -11,11 +11,11 @@
   </head>
   <body>
     <header>
-      <div>
+      <div class="header-info">
         <p>aberto de 08h às 18h - seg à sáb - rua bartolomeu mitre- botafogo</p>
       </div>
-      <a href="index.html"><img src="./img/brafe.png" alt="logo brafé" /></a>
-      <nav>
+      <a class="header-logo" href="index.html"><img src="./img/brafe.png" alt="logo brafé" /></a>
+      <nav class="header-menu">
         <ul>
           <li><a href="">cafés</a></li>
           <li><a href="">cappuccinos</a></li>
