--- a/css-avancado/brafe2/puro/index.html
+++ b/css-avancado/brafe2/puro/index.html
@@ -14,7 +14,9 @@
       <div class="header-info">
         <p>aberto de 08h às 18h - seg à sáb - rua bartolomeu mitre- botafogo</p>
       </div>
-      <a class="header-logo" href="index.html"><img src="./img/brafe.png" alt="logo brafé" /></a>
+      <a class="header-logo" href="index.html"
+        ><img src="./img/brafe.png" alt="logo brafé"
+      /></a>
       <nav class="header-menu">
         <ul>
           <li><a href="">cafés</a></li>
@@ -25,8 +27,8 @@
       </nav>
     </header>
 
-    <div>
-      <nav>
+    <div class="container">
+      <nav class="filter">
         <h2>Preço</h2>
         <ul>
           <li>$</li>
@@ -34,10 +36,10 @@
           <li>$$$</li>
         </ul>
         <h2>Sabor</h2>
-        <ul>
-          <li>Marrom</li>
-          <li>Laranja</li>
-          <li>Amarelo</li>
+        <ul class="filter-flavors">
+          <li><span class="flavor-3">Marrom</span></li>
+          <li><span class="flavor-4">Laranja</span></li>
+          <li><span class="flavor-5">Amarelo</span></li>
         </ul>
         <h2>Tempo</h2>
         <ul>
