Versao desktop finallizado. Brafe 2 Puro

--- a/css-avancado/brafe2/puro/index.html
+++ b/css-avancado/brafe2/puro/index.html
@@ -49,7 +49,7 @@
         </ul>
       </nav>
 
-      <section>
+      <section class="products">  
         <h1>Capuccinos</h1>
         <ul>
           <li>
@@ -57,36 +57,26 @@
             <span>R$ 3,25</span>
             <h2>Vanilla Dice</h2>
           </li>
-        </ul>
-        <ul>
           <li>
             <img src="./img/cafe-2.jpg" alt="café 2" />
             <span>R$ 4.50</span>
             <h2>Blueberry Late</h2>
           </li>
-        </ul>
-        <ul>
           <li>
             <img src="./img/cafe-3.jpg" alt="café 3" />
             <span>R$ 3,25</span>
             <h2>Ghostbusters Brown</h2>
           </li>
-        </ul>
-        <ul>
           <li>
             <img src="./img/cafe-4.jpg" alt="café 4" />
             <span>R$ 4,50</span>
             <h2>Strawberry Fields</h2>
           </li>
-        </ul>
-        <ul>
           <li>
             <img src="./img/cafe-5.jpg" alt="café 5" />
             <span>R$ 3,25</span>
             <h2>Scone Comb</h2>
           </li>
-        </ul>
-        <ul>
           <li>
             <img src="./img/cafe-6.jpg" alt="café 6" />
             <span>R$ 4,50</span>
@@ -96,7 +86,7 @@
       </section>
     </div>
 
-    <footer>
+    <footer class="footer">
       <p>Este é um projeto da Origamid. Mais em origamid.com</p>
       <p>Praia de Botafogo, 300, 5º andar - Botafogo - Rio de Janeiro</p>
     </footer>
