--- a/css-avancado/brafe2/puro/index.html
+++ b/css-avancado/brafe2/puro/index.html
@@ -7,6 +7,7 @@
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/media.css" />
     <title>Brafé 2</title>
   </head>
   <body>
