--- a/css-avancado/brafe3/puro/index.html
+++ b/css-avancado/brafe3/puro/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Brafé 3</title>
 </head>
 <body>
-  <header>
-    <a href="index.html"><img src="./img/brafe.png" alt="logo brafe"></a>
-
-    <nav>
+  <header class="header">
+    <a class="header-logo" href="index.html"><img src="./img/brafe.png" alt="logo brafe"></a>
+    <nav class="header-menu">
       <ul>
         <li><a href="#">Sobre</a></li>
         <li><a href="#">Produtos</a></li>
