Seção de produtos finalizada.

--- a/css-avancado/brafe3/puro/index.html
+++ b/css-avancado/brafe3/puro/index.html
@@ -31,16 +31,15 @@
         <li><a class="nav-hospedagens" href="#">Hospedagens</a></li>
       </ul>
     </nav>
-  </main>
 
-  <section>
+    <section class="products">
       <header>
         <h1>Produtos</h1>
-        <a href="#">Adicionar Produtos</a>
+        <a class="btn-add_product" href="#">Adicionar Produtos</a>
       </header>
       
       <ul>
-        <li>
+        <li class="products-item">
           <img src="./img/cafe-1.jpg" alt="café 1">
           <ul>
             <li><span>Nome</span> Cappuccino</li>
@@ -49,7 +48,7 @@
           </ul>
           <a href="#">Editar</a>
         </li>
-        <li>
+        <li class="products-item">
           <img src="./img/cafe-2.jpg" alt="café 1">
           <ul>
             <li><span>Nome</span> Cappuccino</li>
@@ -58,7 +57,7 @@
           </ul>
           <a href="#">Editar</a>
         </li>
-        <li>
+        <li class="products-item">
           <img src="./img/cafe-3.jpg" alt="café 1">
           <ul>
             <li><span>Nome</span> Cappuccino</li>
@@ -67,7 +66,7 @@
           </ul>
           <a href="#">Editar</a>
         </li>
-        <li>
+        <li class="products-item">
           <img src="./img/cafe-4.jpg" alt="café 1">
           <ul>
             <li><span>Nome</span> Cappuccino</li>
@@ -78,6 +77,9 @@
         </li>
       </ul>
   </section>
+  </main>
+
+  
 
   <footer>
     <p>Este é um projeto da Origamid. Mais em origamid.com</p>
