Página modo desktop finalizado.

--- a/css-avancado/brafe3/puro/index.html
+++ b/css-avancado/brafe3/puro/index.html
@@ -35,7 +35,7 @@
     <section class="products">
       <header>
         <h1>Produtos</h1>
-        <a class="btn-add_product" href="#">Adicionar Produtos</a>
+        <a class="btn-add" href="#">Adicionar Produtos</a>
       </header>
       
       <ul>
@@ -75,15 +75,27 @@
           </ul>
           <a href="#">Editar</a>
         </li>
+        <li class="products-item">
+          <img src="./img/cafe-4.jpg" alt="café 1">
+          <ul>
+            <li><span>Nome</span> Cappuccino</li>
+            <li><span>Preço</span> R$ 2,45</li>
+            <li><span>Dados</span> Café novo no estilo Cappucino</li>
+          </ul>
+          <a href="#">Editar</a>
+        </li>
+        <li class="products-item">
+          <img src="./img/cafe-4.jpg" alt="café 1">
+          <ul>
+            <li><span>Nome</span> Cappuccino</li>
+            <li><span>Preço</span> R$ 2,45</li>
+            <li><span>Dados</span> Café novo no estilo Cappucino</li>
+          </ul>
+          <a href="#">Editar</a>
+        </li>
+        
       </ul>
   </section>
-  </main>
-
-  
-
-  <footer>
-    <p>Este é um projeto da Origamid. Mais em origamid.com</p>
-    <p>Praia de Botafogo, 300, 5º Andar - Botafogo - Rio de Janeiro</p>
-  </footer>
+  </main>    
 </body>
 </html>
