Menu, sobre e seção de produtos finalizados - flexbog

--- a/css-flexbox/flexblog/index.html
+++ b/css-flexbox/flexblog/index.html
@@ -11,10 +11,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/media.css" />
     <title>FlexBlog</title>
   </head>
   <body>
-    
     <div class="superinfo-bg">
       <div class="superinfo">
         <p>Seg/Sex - 08:00 às 18:00</p>
@@ -28,7 +28,7 @@
         <div class="menu-logo">
           <a href="#">FlexBlog</a>
         </div>
-        <nav>
+        <nav class="menu-nav">
           <ul>
             <li><a href="#about">Sobre</a></li>
             <li><a href="#products">Produtos</a></li>
@@ -72,14 +72,10 @@
           <h2>Purple</h2>
           <img src="./img/produtos1.jpg" alt="" />
         </div>
-      </div>
-      <div class="products-container">
         <div class="products-item pink">
           <h2>Pink</h2>
           <img src="./img/produtos2.jpg" alt="" />
         </div>
-      </div>
-      <div class="products-container">
         <div class="products-item blue">
           <h2>Blue</h2>
           <img src="./img/produtos3.jpg" alt="" />
@@ -129,27 +125,55 @@
     <section class="quality" id="quality">
       <div class="quality-item">
         <h2>Inteligente</h2>
-        <p>Lorem ipsum dolor sit amet. Vel ipsum doloribus qui inventore facilis qui harum voluptatem et dolores iusto ea veritatis. Est enim error ut aliquid neque a quia enim quo fuga dolorem rem internos consequatur eos debitis atque. </p>
+        <p>
+          Lorem ipsum dolor sit amet. Vel ipsum doloribus qui inventore facilis
+          qui harum voluptatem et dolores iusto ea veritatis. Est enim error ut
+          aliquid neque a quia enim quo fuga dolorem rem internos consequatur
+          eos debitis atque.
+        </p>
       </div>
       <div class="quality-item">
         <h2>Compacto</h2>
-        <p>Lorem ipsum dolor sit amet. Vel ipsum doloribus qui inventore facilis qui harum voluptatem et dolores iusto ea veritatis. Est enim error ut aliquid neque a quia enim quo fuga dolorem rem internos consequatur eos debitis atque. </p>
+        <p>
+          Lorem ipsum dolor sit amet. Vel ipsum doloribus qui inventore facilis
+          qui harum voluptatem et dolores iusto ea veritatis. Est enim error ut
+          aliquid neque a quia enim quo fuga dolorem rem internos consequatur
+          eos debitis atque.
+        </p>
       </div>
       <div class="quality-item">
         <h2>Econômico</h2>
-        <p>Lorem ipsum dolor sit amet. Vel ipsum doloribus qui inventore facilis qui harum voluptatem et dolores iusto ea veritatis.</p>
+        <p>
+          Lorem ipsum dolor sit amet. Vel ipsum doloribus qui inventore facilis
+          qui harum voluptatem et dolores iusto ea veritatis.
+        </p>
       </div>
       <div class="quality-item">
         <h2>Transparente</h2>
-        <p>Lorem ipsum dolor sit amet. Vel ipsum doloribus qui inventore facilis qui harum voluptatem et dolores iusto ea veritatis. Est enim error ut aliquid neque. </p>
+        <p>
+          Lorem ipsum dolor sit amet. Vel ipsum doloribus qui inventore facilis
+          qui harum voluptatem et dolores iusto ea veritatis. Est enim error ut
+          aliquid neque.
+        </p>
       </div>
       <div class="quality-item">
         <h2>Opaco</h2>
-        <p>Lorem ipsum dolor sit amet. Vel ipsum doloribus qui inventore facilis qui harum voluptatem et dolores iusto ea veritatis. Est enim error ut aliquid neque a quia enim quo fuga dolorem rem internos consequatur eos debitis atque. Est enim error ut aliquid neque a quia enim quo fuga dolorem rem internos consequatur eos debitis atque.  </p>
+        <p>
+          Lorem ipsum dolor sit amet. Vel ipsum doloribus qui inventore facilis
+          qui harum voluptatem et dolores iusto ea veritatis. Est enim error ut
+          aliquid neque a quia enim quo fuga dolorem rem internos consequatur
+          eos debitis atque. Est enim error ut aliquid neque a quia enim quo
+          fuga dolorem rem internos consequatur eos debitis atque.
+        </p>
       </div>
       <div class="quality-item">
         <h2>Sustentável</h2>
-        <p>Lorem ipsum dolor sit amet. Vel ipsum doloribus qui inventore facilis qui harum voluptatem et dolores iusto ea veritatis. Est enim error ut aliquid neque a quia enim quo fuga dolorem rem internos consequatur eos debitis atque. </p>
+        <p>
+          Lorem ipsum dolor sit amet. Vel ipsum doloribus qui inventore facilis
+          qui harum voluptatem et dolores iusto ea veritatis. Est enim error ut
+          aliquid neque a quia enim quo fuga dolorem rem internos consequatur
+          eos debitis atque.
+        </p>
       </div>
     </section>
 
@@ -159,7 +183,7 @@
         <p>assine e fique por dentro das novidades</p>
       </div>
       <form action="">
-        <input type="email" placeholder="Seu e-mail" id="">
+        <input type="email" placeholder="Seu e-mail" id="" />
         <button type="submit">Assinar</button>
       </form>
     </section>
