--- a/css-flexbox/flexblog/index.html
+++ b/css-flexbox/flexblog/index.html
@@ -182,7 +182,7 @@
         <h1>Newsletter</h1>
         <p>assine e fique por dentro das novidades</p>
       </div>
-      <form action="">
+      <form class="newsletter-form">
         <input type="email" placeholder="Seu e-mail" id="" />
         <button type="submit">Assinar</button>
       </form>
